# hipCollections

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.TXT  README.md
benchmarks/: CMakeLists.txt  defaults.hpp  hash_bench.hip  utils.hpp
benchmarks/analysis/notebooks/: Utils.py
benchmarks/hash_table/static_map/: contains_bench.hip  erase_bench.hip  find_bench.hip  insert_bench.hip
benchmarks/hash_table/static_map_block/: contains_bench.hip  erase_bench.hip  find_bench.hip  insert_bench.hip
benchmarks/hash_table/static_map_tile/: contains_bench.hip  erase_bench.hip  find_bench.hip  insert_bench.hip
benchmarks/hash_table/static_multimap/: count_bench.hip  insert_bench.hip  query_bench.hip  retrieve_bench.hip
benchmarks/hash_table/static_multimap_cg/: count_bench.hip  insert_bench.hip  query_bench.hip  retrieve_bench.hip
benchmarks/hash_table/static_set/: contains_bench.hip  find_bench.hip  insert_bench.hip  retrieve_all_bench.hip  size_bench.hip
benchmarks/hash_table/static_set_cg/: contains_bench.hip  insert_bench.hip  retrieve_all_bench.hip  size_bench.hip
ci/checks/: doxygen.sh  style.sh
ci/gpu/: build_hip.sh
doxygen/: Doxyfile
examples/: CMakeLists.txt
examples/static_map/: count_by_key_example.hip  custom_type_example.hip  device_view_example.hip  host_bulk_example.hip
examples/static_multimap/: host_bulk_example.hip
examples/static_set/: device_ref_example.hip  device_subsets_example.hip  host_bulk_example.hip
include/hip_extensions/hip_cooperative_groups_ext/: amd_cooperative_groups_ext.cuh
include/hip_extensions/hip_warp_primitives/: amd_warp_primitives.cuh
include/hipco/: aow_storage.cuh  cuda_stream_ref.hpp  extent.cuh  hash_functions.cuh  operator.hpp  pair.cuh  probe_sequences.cuh  probing_scheme.cuh  sentinel.cuh  static_map.cuh  static_map_ref.cuh  static_multimap.cuh  static_set.cuh  static_set_ref.cuh  storage.cuh
include/hipco/detail/: __config  bitwise_compare.cuh  common_functors.cuh  common_kernels.cuh  cuda_stream_ref.inl  equal_wrapper.cuh  error.hpp  operator.inl  prime.hpp  probe_sequence_impl.cuh  probing_scheme_base.cuh  probing_scheme_impl.inl  static_map.inl  static_map_kernels.cuh  traits.hpp  tuning.cuh  utils.cuh  utils.hpp
include/hipco/detail/extent/: extent.inl
include/hipco/detail/hash_functions/: murmurhash3.cuh  utils.cuh  xxhash.cuh
include/hipco/detail/open_addressing/: open_addressing_impl.cuh  open_addressing_ref_impl.cuh
include/hipco/detail/pair/: pair.inl  tuple_helpers.inl
include/hipco/detail/static_map/: functors.cuh  kernels.cuh  static_map.inl  static_map_ref.inl
include/hipco/detail/static_multimap/: device_view_impl.inl  kernels.cuh  static_multimap.inl
include/hipco/detail/static_set/: functors.cuh  kernels.cuh  static_set.inl  static_set_ref.inl
include/hipco/detail/storage/: aow_storage.cuh  aow_storage.inl  aow_storage_base.cuh  counter_storage.cuh  kernels.cuh  storage.cuh  storage_base.cuh
include/hipco/detail/utility/: cuda.cuh  cuda.hpp  math.hpp
include/hipco/utility/: allocator.hpp  error.hpp  fast_int.cuh  key_generator.hpp  traits.hpp
rocm-docs/: build.sh  conf.py  index.md
rocm-docs/.sphinx/: _toc.yml.in
rocm-docs/doxygen/: Doxyfile
tests/: CMakeLists.txt  utils.cuh  utils.hpp
tests/static_map/: capacity_test.hip  custom_type_test.hip  duplicate_keys_test.hip  erase_test.hip  heterogeneous_lookup_test.hip  insert_and_find_test.hip  insert_or_assign_test.hip  key_sentinel_test.hip  rehash_test.hip  shared_memory_test.hip  stream_test.hip  unique_sequence_test.hip
tests/static_multimap/: custom_pair_retrieve_test.hip  custom_type_test.hip  heterogeneous_lookup_test.hip  insert_if_test.hip  multiplicity_test.hip  non_match_test.hip  pair_function_test.hip
tests/static_set/: capacity_test.hip  heterogeneous_lookup_test.hip  insert_and_find_test.hip  large_input_test.hip  rehash_test.hip  retrieve_all_test.hip  size_test.hip  unique_sequence_test.hip
tests/utility/: extent_test.hip  fast_int_test.hip  hash_test.hip  storage_test.hip
